@@ -4,23 +4,26 @@ import java.util.Collections;
 import java.util.EnumMap;
 import java.util.Set;
 
-public enum IssueStatus {
+public enum ReportType {
+        ISSUE_TREND,
+    PROJECT_PROGRESS,
+    PERFORMANCE_METRICS;
 
-    PENDING,
-    RUNNING,
-    FAILED,
-    COMPLETE;
-
-    private static final EnumMap<IssueStatus, Set<IssueStatus>> allowedTransitions = new EnumMap<>(IssueStatus.class);
+    private static final EnumMap<ReportType, Set<ReportType>> allowedTransitions = new EnumMap<>(ReportType.class);
 
     static {
-        allowedTransitions.put(PENDING, Set.of(RUNNING, FAILED));
-        allowedTransitions.put(RUNNING, Set.of(COMPLETE, FAILED));
-        allowedTransitions.put(FAILED, Set.of(PENDING, RUNNING));
-        allowedTransitions.put(COMPLETE, Collections.emptySet()); // No transitions from COMPLETE
+        allowedTransitions.put(ISSUE_TREND, Set.of(PROJECT_PROGRESS));
+        allowedTransitions.put(PROJECT_PROGRESS, Set.of(PERFORMANCE_METRICS));
+        allowedTransitions.put(PERFORMANCE_METRICS, Collections.emptySet());
     }
 
-    public boolean canTransitionTo(IssueStatus newStatus) {
-        return allowedTransitions.getOrDefault(this, Collections.emptySet()).contains(newStatus);
+    public boolean canTransitionTo(ReportType newType) {
+        return allowedTransitions.getOrDefault(this, Collections.emptySet()).contains(newType);
+    }
+    public ReportType getNextStatus() {
+        return allowedTransitions.getOrDefault(this, Collections.emptySet())
+                .stream()
+                .findFirst()
+                .orElse(null); // Returns null if it's the final state
     }
 }
